# rmw

./: .cirrus.yml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis-before_install.sh  .travis.yml  .version  AUTHORS  AUTHORS.md  BUGS  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  Dockerfile  Doxyfile  INSTALL  ISSUE_TEMPLATE.md  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  README.txt  ReleaseNotes  Release_Notes.txt  THANKS  TODO  aclocal.m4  compile  config.h.in  config.in  configure  configure.ac  configure.in  depcomp  file_id.diz  (+11 more)
.github/: spellcheck-config.yml  wordlist.txt
.github/scripts/: all_tests.sh  travis_script.sh
.github/workflows/: bsd.yml  c-cpp.yml  cirrus-email.yml  codeql-analysis.yml  codeql.yml  coverity.yml  docker-build-env.yml  docker-meson.yml  docker.yml  jekyll.yml  macos.yml  release.yml  shellcheck.yml  spellcheck.yml
autom4te.cache/: output.1  output.2  output.3  output.4  output.5  output.6  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6
build-aux/m4/: ax_valgrind_check.m4
completions/: README.md  meson.build
completions/fish/: README.md  rmw.fish
docker/: .env  Dockerfile  Dockerfile-build-env  Dockerfile-build-env_alpine  Dockerfile-build-env_bionic  Dockerfile-build-env_bookworm  Dockerfile-build-env_bullseye  Dockerfile-build-env_focal  Dockerfile-build-env_tumbleweed  Dockerfile-meson  README.md  docker-compose.yml  entrypoint-test.sh
docs/: CNAME  Contributing.md  Gemfile  Home.md  README.md  Testing.md  Translating.md  _Sidebar.md  _config.yml  code-testing.html  code-testing.md  extra_tips.md  faq.md  index.html  index.md  profile.example.txt  screenshots.html  translating.html  translating.md  website-design.md
docs/_includes/: head.html  tail.html
docs/_layouts/: default.html
docs/assets/: overrides.css  w3.css  w3pro.css
docs/doxygen/html/: annotated.html  bst_8c.html  bst_8c__incl.map  bst_8c__incl.md5  bst_8h.html  bst_8h__dep__incl.map  bst_8h__dep__incl.md5  bst_8h__incl.map  bst_8h__incl.md5  bst_8h_source.html  bug.html  classes.html  config_8h_source.html  config__rmw_8c.html  config__rmw_8c__incl.map  config__rmw_8c__incl.md5  config__rmw_8h.html  config__rmw_8h__dep__incl.map  config__rmw_8h__dep__incl.md5  config__rmw_8h__incl.map  config__rmw_8h__incl.md5  config__rmw_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  gettext_8h_source.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  index.html  md_AUTHORS.html  md_CODE_OF_CONDUCT.html  md_CONTRIBUTING.html  md_ISSUE_TEMPLATE.html  menudata.js  messages__rmw_8c.html  (+85 more)
docs/doxygen/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  (+44 more)
etc/: Makefile  Makefile.am  Makefile.in  rmw-en.man  rmw-fi.man  rmwrc
licenses/: canfigger-LICENSE
man/: Makefile.am  Makefile.in  meson.build  rmw-de.man  rmw-pl.man  rmw-pt.man  rmw.1
man/de/: rmw.1
man/es/: rmw.1
man/ne/: rmw.1
man/nl/: rmw.1
man/pl/: rmw.1
man/pt_BR/: rmw.1
packaging/: file_id.diz  release-checklist.txt  rmw-rpm.spec  rmw.desktop
packaging/Slackbuild/rmw/: README  README.Slackware  rmw.SlackBuild  rmw.info  slack-desc
packaging/appimage/: AppRun  docker-compose.yml  make-appimage.sh  pre-appimage.sh  workflow.sh
packaging/debian/: README  README.Debian  README.source  changelog  control  copyright  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rmw.cron.d.ex  rmw.doc-base.EX  rules
po/: ChangeLog  LINGUAS  Makevars  POTFILES  POTFILES.in  de.po  de_DE.gmo  de_DE.po  en_US.pot  es_AR.gmo  es_AR.po  es_ES.gmo  es_ES.po  es_MX.gmo  es_MX.po  fi.gmo  fi.po  fr.po  fr_FR.gmo  fr_FR.po  hi.po  hi_IN.mo  hi_IN.po  it_IT.gmo  it_IT.po  meson.build  ne.gmo  ne.po  nl.po  nl_NL.gmo  nl_NL.mo  nl_NL.po  pl.po  pl_PL.gmo  pl_PL.po  pt_BR.gmo  pt_BR.po  pt_PT.gmo  pt_PT.po  rmw.pot  (+4 more)
src/: .gitattributes  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  bst.c  bst.h  btrfs.c  btrfs.h  config.in  config_rmw.c  config_rmw.h  ficlone.c  ficlone.h  function_prototypes.h  gettext.h  globals.c  globals.h  include.mk  main.c  main.h  meson.build  messages.c  messages.h  messages_rmw.c  messages_rmw.h  parse_cli_options.c  parse_cli_options.h  primary_funcs.c  primary_funcs.h  purging.c  purging_rmw.c  purging_rmw.h  restore.c  restore.h  restore_rmw.c  restore_rmw.h  rmw  rmw.c  rmw.h  (+20 more)
src/bsd-coreutils/: LICENSE  README.md  compat.h  meson.build  rm  rm.c
src/bsd-coreutils/compat/include/: compat.h  simpleq.h
src/bsd-coreutils/compat/src/: pwcache.c
src/bsd-coreutils/compat/unkown_brother/: strlcpy.c
src/bsdutils/: README.md  compat.h  meson.build  rm.c  strmode.c
src/functions/: config_rmw.c  config_rmw.h  messages_rmw.c  messages_rmw.h  purging_rmw.c  purging_rmw.h  restore_rmw.c  restore_rmw.h  strings_rmw.c  strings_rmw.h  temp.pot  trashinfo_rmw.c  trashinfo_rmw.h  trivial_rmw.c  trivial_rmw.h  utils_rmw.c  utils_rmw.h
subprojects/: canfigger.wrap
test/: COMMON  Makefile.am  Makefile.in  README  VARS  VARS.in  basic.sh  basic.sh.in  btrfs_clone.sh  buffer_overrun.c  buffer_overrun.sh.in  concatenate.sh  config_test.c  create-some-files.sh.in  meson.build  multi_strlen.c  purging.sh  purging.sh.in  realize_home.c  restore.sh  restore.sh.in  rmw-bcachefs-test.img.sha256sum  rmw-btrfs-test.img.sha256sum  rmw-xfs-test.img.sha256sum  rmw.alt.testrc  rmw.btrfs01.rc  rmw.btrfs02.rc  rmw.btrfs03.rc  rmw.btrfs04.rc  rmw.btrfs_usb.rc  rmw.purge_disabled.testrc  rmw.testrc  script-head  strings.c  test.c  test.h  test_basic.sh  test_basic.sh.in  test_bcachefs.sh  test_btrfs_clone.sh  (+22 more)
test/conf/: bcachefs_img.testrc  btrfs_img.testrc  rmw.testrc  xfs_img.testrc
test/fragments/: 01_arg_u.sh  fail_restore_files_not_in_waste.sh  mrl_not_exist.sh  restore_with_wildcard.sh
