option('build_tests', type : 'boolean', value : true,
       description : 'build tests')

option('nls', type : 'boolean', value : true,
       description : 'include native language support (install translations)')

option('docdir', type : 'string', value : 'share/doc/rmw',
       description : 'directory where the documentation should be installed to')

option('without-curses', type : 'boolean', value : 'false',
       description : 'build without curses/menu support')

option('fish-completions', type: 'boolean', value: true,
       description: 'Install fish shell completions')

