option('build_tests', type : 'boolean', value : true,
       description : 'build tests')
option(
    'want_ficlone',
    type : 'boolean',
    value: 'true',
    description: 'Include support for cloning files between subvolumes using FICLONE (btrfs, bcachefs, xfs, etc.)')
option('nls', type : 'boolean', value : true,
       description : 'include native language support (install translations)')

option('docdir', type : 'string', value : 'share/doc/rmw',
       description : 'directory where the documentation should be installed to')

option('without-curses', type : 'boolean', value : 'false',
       description : 'build without curses/menu support')

option('install_shell_completions', type: 'boolean', value: true,
       description: 'Install shell completions')

